src/test/ui/borrowck/borrowck-uninit-ref-chain.mir.stderr
error[E0381]: borrow of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit-ref-chain.rs:11:14
   |
LL |     let _y = &**x;
   |              ^^^^ use of possibly uninitialized `**x`

error[E0381]: borrow of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit-ref-chain.rs:15:14
   |
LL |     let _y = &**x;
   |              ^^^^ use of possibly uninitialized `**x`

error[E0381]: borrow of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit-ref-chain.rs:19:14
   |
LL |     let _y = &**x;
   |              ^^^^ use of possibly uninitialized `**x`

error[E0381]: assign to part of possibly uninitialized variable: `a`
  --> $DIR/borrowck-uninit-ref-chain.rs:24:5
   |
LL |     a.x = 0;
   |     ^^^^^^^ use of possibly uninitialized `a`

error[E0381]: assign to part of possibly uninitialized variable: `a`
  --> $DIR/borrowck-uninit-ref-chain.rs:29:5
   |
LL |     a.x = &&0;
   |     ^^^^^^^^^ use of possibly uninitialized `a`

error[E0381]: assign to part of possibly uninitialized variable: `a`
  --> $DIR/borrowck-uninit-ref-chain.rs:35:5
   |
LL |     a.x = 0;
   |     ^^^^^^^ use of possibly uninitialized `a`

error[E0381]: assign to part of possibly uninitialized variable: `a`
  --> $DIR/borrowck-uninit-ref-chain.rs:40:5
   |
LL |     a.x = &&0;
   |     ^^^^^^^^^ use of possibly uninitialized `a`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0381`.
